data/derived/sp14/progs/unify/prog1630.ml.out
Characters 96-106:
  | Sine(x) -> Printf.sprintf "Sine(%s)" (exprToString x)
                              ^^^^^^^^^^
Error: This expression has type
         ('a -> 'b -> 'c -> 'd, unit, string, string, string,
          'a -> 'b -> 'c -> 'd)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b -> 'c -> 'd, unit, string, string, string, string)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b -> 'c -> 'd is not compatible with type string 
